--- a/src/ShopBundle/Resources/views/Default/index.html.twig
+++ b/src/ShopBundle/Resources/views/Default/index.html.twig
@@ -9,7 +9,7 @@
         <div class="col-md-12 sale-product">
             <h2>Our Products</h2>
             {% for product in pagination %}
-                <div class="col-sm-6 col-xs-12">
+                <div class="col-md-6 col-xs-12">
                     <div class="product-item">
                         <div class="pi-img-wrapper">
                             <img src="{{ asset('img/products/model1.jpg') }}" class="img-responsive" alt="{{ product.title|e }}">
